# Course-design-of-compiling-principles

code/: Grammar.cpp  Grammar.h  main.cpp  语法分析器.md
code/complier/: CMakeLists.txt  README.md  main.cpp  环境配置.md
code/complier/Files/: GrammarError.txt  README.md  Symboltable.txt  constTest.txt  digui.txt  exMiddle.txt  funCallError.txt  hanshudiaoyong.txt  middle.txt  showArr.txt  showDAG.txt  showDIgui.txt  showTable.txt  source.txt  source1.txt  source3.txt  source4.txt  source5.txt  source6+.txt  source6.txt  structSum.txt  sumArr.txt  target.asm  test.txt  todo.bat  tokenOutput.txt  while.txt  展示表.txt  新建文本文档.txt
code/complier/GrammarAction/: GrammarAction.cpp  GrammarAction.h
code/complier/GrammarAnalyzer/: Grammar.cpp  Grammar.h
code/complier/Lexical/: lexical.cpp  lexical.h
code/complier/Optimizer/: Optimizer.cpp  Optimizer.h
code/complier/STable/: KTtable.txt  PTtable.txt  STable.cpp  STable.h  Sheet.cpp  Sheet.h
code/complier/TargetCodeGenerator/: StackManager.cpp  StackManager.h  TargetCodeGenerator.cpp  TargetCodeGenerator.h  quatName.h  type.h  x86Code.h  源.cpp
code/complier/XTable/: ArrSheet.cpp  ArrSheet.h  ElemSheet.cpp  ElemSheet.h  FunSheet.cpp  FunSheet.h  TmpSheet.cpp  TmpSheet.h  TypeSheet.cpp  TypeSheet.h  XTable.cpp  XTable.h  funSheet.cpp  funSheet.h  typeSheet.cpp  typeSheet.h  接口说明.md
code/complier/symbolTable/: symbolTable.cpp  symbolTable.h
code/complier/tokenType/: README.md  tokenType.h
code/complier/type/: cat.h  quatName.h  type.h
说明文档/: Grammer.md  clion开发注意事项.md  token类型编码表.md  type编码表.md  一些约定.md  四元式.md  最终文法.md  (+10 more)
(+11 files in other folders)
